# finito

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: action.rs  condition.rs  future.rs  lib.rs
src/strategy/: exponential_backoff.rs  fibonacci_backoff.rs  fixed_interval.rs  mod.rs
wasm-tests/: Cargo.toml
wasm-tests/tests/: wasm.rs
wasm_tests/: Cargo.toml
wasm_tests/tests/: wasm.rs
