[package]
name = "finito"
version = "0.1.0"
authors = ["Niklas Adolfsson <niklasadolfsson1@gmail.com>"]
description = "Retry behaviours for futures"
license = "MIT"
readme = "README.md"
keywords = ["futures", "retry", "exponential", "backoff", "wasm"]
edition = "2021"

[dependencies]
pin-project = "1"
futures-timer = "3"

[target.'cfg(target_family = "wasm")'.dependencies]
futures-timer = { version = "3", features = ["wasm-bindgen"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
